<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_signUpLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.67" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_firstVLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_secondVLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:id="@+id/img_digitim"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_digitm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/img_digitim"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:gravity="center_horizontal"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="-20dp"

            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:textSize="17dp"
            android:textColorHint="@color/gray"
            android:gravity="center_horizontal"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="-20dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_secureLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/secure_login_button"
            android:shadowColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintBottom_toTopOf="@id/gl_signUpLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/secure_login"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="viewStart"
            android:paddingLeft="77dp"
            android:drawableStart="@drawable/ic_lock_foreground"
            android:drawablePadding="-6dp"
            />

        <TextView
            android:id="@+id/tv_dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@id/tv_signUp"
            app:layout_constraintStart_toStartOf="@id/gl_firstVLine"
            app:layout_constraintTop_toBottomOf="@id/gl_signUpLine"

            />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:clickable="true"
            android:text="@string/sign_up"
            android:textColor="@color/babyBlue"
            android:textSize="16dp"
            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="@id/gl_secondVLine"
            app:layout_constraintStart_toEndOf="@id/tv_dontHaveAccount"
            app:layout_constraintTop_toBottomOf="@id/gl_signUpLine" />

        <RelativeLayout
            android:id="@+id/rl_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="@id/gl_secondVLine"
            app:layout_constraintStart_toEndOf="@id/gl_firstVLine"
            app:layout_constraintTop_toBottomOf="@id/tv_dontHaveAccount"
            android:paddingVertical="10dp"
            >
                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="OR"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toLeftOf="@id/tv_or"
                    android:background="@color/white"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="50dp"
                    android:layout_toRightOf="@id/tv_or"
                    android:background="@color/white"
                    />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_secondVLine"
            app:layout_constraintStart_toEndOf="@id/gl_firstVLine"
            app:layout_constraintTop_toBottomOf="@id/rl_relative"
            />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/facebook_button"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="-3dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="30dp"
            android:text="@string/facebook"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rl_relative"
                />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/google_button"
            android:drawableStart="@drawable/ic_google"
            android:fontFamily="serif"
            android:paddingLeft="36dp"
            android:text="@string/google"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/rl_relative"
                />

</androidx.constraintlayout.widget.ConstraintLayout>